[package]
name = "tonic_lnd"
version = "0.19.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"
description = "An async library implementing LND RPC via tonic and prost"
homepage = "https://github.com/Kixunil/tonic_lnd"
repository = "https://github.com/Kixunil/tonic_lnd"
readme = "README.md"
keywords = ["LND", "rpc", "grpc", "tonic", "async"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies", "network-programming"]
license = "MITNFA"

[dependencies]
tonic = { version = "0.5", features = ["tls"] }
prost = "0.8"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
rustls = { version = "0.19", features = ["dangerous_configuration"] }
webpki = "0.21"
hex = "0.4"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
rust_decimal = { version = "1.26.1", features = ["db-postgres"] }
rust_decimal_macros = "1.26.1"

[build-dependencies]
tonic-build = "0.5.2"

[dev-dependencies]
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
sha2 = "0.10.6"
